# libofono

./: CMakeLists.txt  LICENSE  libofono.pc.in
include/: log.h  ofono-call.h  ofono-common.h  ofono-connman.h  ofono-modem.h  ofono-netmon.h  ofono-network.h  ofono-phonebook.h  ofono-sat.h  ofono-sim.h  ofono-sms-agent.h  ofono-sms.h  ofono-ss.h
src/: common.c  common.h  ofono-call.c  ofono-common.c  ofono-connman.c  ofono-modem.c  ofono-netmon.c  ofono-network.c  ofono-phonebook.c  ofono-sat.c  ofono-sim.c  ofono-sms-agent.c  ofono-sms.c  ofono-ss.c
test/: CMakeLists.txt  README  call.c  common.c  connman.c  main.c  main.h  modem.c  netmon.c  network.c  phonebook.c  sat.c  sim.c  sms.c  ss.c
